# cryptopay-testing-framework

./: .gitignore  Cargo.toml  contracts_sol_ERC20_sol_ERC20.abi  docker-compose.yml  readme.md
cache/: solidity-files-cache.json
contracts/abi/: contracts_sol_Token_sol_Token.abi
contracts/artifacts/: ERC20.json  Token.json
contracts/sol/: ERC20.sol  Token.sol
migrations/: 10_payment.sql  11_withdrawal_fee.sql  12_user_withdrawal_fee.sql  1_user.sql  2_network.sql  3_asset.sql  4_wallet.sql  5_hot_wallet.sql  6_balance.sql  7_intent.sql  8_withdrawal.sql  9_pending_withdrawal.sql
src/: cli.rs  config.rs  error.rs  main.rs  tests.rs  utils.rs
src/cmd/: mod.rs
src/cmd/api/: handler.rs  mod.rs  utils.rs
src/cmd/api/asset/: create.rs  mod.rs
src/cmd/api/hot_wallet/: create.rs
src/cmd/api/intent/: create.rs
src/cmd/api/network/: create.rs  mod.rs  utils.rs
src/cmd/api/user/: create.rs  utils.rs
src/cmd/api/wallet/: create.rs  mod.rs
src/cmd/db/: create.rs  drop.rs  handler.rs  mod.rs  reset.rs  utils.rs
src/cmd/evm/: deploy.rs  handler.rs  mint.rs  mint_ethers.rs  mod.rs  spawn.rs  transfer.rs
src/cmd/service/: full_flow.rs  handler.rs  mod.rs  prepare.rs  utils.rs
src/tests/: ethers_tests.rs  utils_tests.rs
