[package]
name = "cryptopay-testing-framework"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ctf"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1", features = ["full", "test-util"] }
bigdecimal = { version = "0.3.1", features = ["serde"] }
ethers = { version = "2.0.14", features = ["ws"] }
reqwest = "0.12.4"
colored = "2.1.0"
argon2 = "0.5.2"
rand = "0.8.5"
serde = "1.0.201"
serde_json = "1.0.116"
thiserror = "1.0.60"
anyhow = "1.0.83"
uuid = { version = "1.8.0", features = ["serde", "v4"] }

[dependencies.alloy]
git = "https://github.com/alloy-rs/alloy.git"
features = [
    "providers",
    "network",
    "contract",
    "signers",
    "signer-wallet",
    "node-bindings",
    "network",
    "eips",
    "transports",
]


[dependencies.sqlx]
version = "0.7.4"
features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "time",
    "uuid",
    "bigdecimal",
]
